# puenteo

./: .gitignore  LICENSE  README.md  asb  puenteo-improvements.md  puenteo-run  pyproject.toml
.github/workflows/: publish.yml
agent_session_bridge/: __init__.py  api.py  bootstrap.py  cli.py  exporters.py  format.py  models.py  rich.py  search.py  version.py
agent_session_bridge/providers/: claude.py  grok.py  pi.py
puenteo/: __init__.py  api.py  bootstrap.py  cli.py  exporters.py  extract.py  format.py  rich.py  search.py  util.py  version.py
puenteo/providers/: __init__.py  aider.py  antigravity.py  claude.py  codex.py  continue_dev.py  cursor.py  gemini_cli.py  goose.py  grok.py  openhands.py  pi.py  qwen.py
scripts/: install_skills.sh  publish.sh
skills/agent-session-bridge/: SKILL.md
skills/puenteo/: SKILL.md
tests/: test_smoke.py
