[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "puenteo"
version = "0.4.0"
description = "Puenteo — the bridge between coding agents. List, search, and export Claude/Codex/Grok/Pi sessions to md/html/pdf/json/zip (Python library + CLI)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mano7onam", email = "mano7onamm@gmail.com" }]
keywords = [
  "agents",
  "bridge",
  "puente",
  "claude-code",
  "codex",
  "grok",
  "cli",
  "library",
  "export",
  "markdown",
  "pdf",
  "session",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Homepage = "https://github.com/mano7onam/puenteo"
Repository = "https://github.com/mano7onam/puenteo"
Issues = "https://github.com/mano7onam/puenteo/issues"
Changelog = "https://github.com/mano7onam/puenteo/releases"

[project.scripts]
puenteo = "puenteo.cli:main"
# short alias
pto = "puenteo.cli:main"

[tool.setuptools.packages.find]
include = ["puenteo*"]

[tool.setuptools.package-data]
puenteo = ["py.typed"]
